[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Solid_Shapes/Circle_Solid.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Environment/Pick_Up.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]

[node name="Pick_Up" type="Area2D"]
script = ExtResource( 2 )

[node name="Highlight_Sprite" type="Sprite" parent="."]
scale = Vector2( 0.0116883, 0.0115929 )
texture = ExtResource( 1 )

[node name="Pick_Up_Select" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Radius" type="Area2D" parent="."]

[node name="Pick_Up_Valid" type="CollisionShape2D" parent="Radius"]
scale = Vector2( 7.04297, 7.30214 )
shape = SubResource( 2 )

[node name="Item_Sprite" type="Sprite" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_Pick_Up_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Pick_Up_mouse_exited"]
[connection signal="body_entered" from="Radius" to="." method="_on_Radius_body_entered"]
[connection signal="body_exited" from="Radius" to="." method="_on_Radius_body_exited"]
